alignment fix

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,9 +2,8 @@
   width: 100vw;
   height: auto;
   display: flex;
-  align-items: center;
-  padding-top: 40px;
-  flex-direction: column;
+  padding: 40px 40px;
+  flex-direction: row;
 }
 
 body {
@@ -18,7 +17,7 @@ body {
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  margin-top: 50px;
+  margin-left: 50px;
   border: 1px solid lightgray;
   font-family: Arial, Helvetica, sans-serif;
 
